// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > form > call-taker > date time options should correctly handle "12a" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="12:00 AM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should correctly handle "12p" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="12:00 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should correctly handle "133" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="1:03 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should correctly handle "133p" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="1:33 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should correctly handle "135p" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="1:35 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should correctly handle "1335" 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="1:35 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;

exports[`components > form > call-taker > date time options should render 1`] = `
<div>
  <select>
    <option
      value="NOW"
    >
      components.DateTimeOptions.now
    </option>
    <option
      value="DEPART"
    >
      components.DateTimeOptions.departAt
    </option>
    <option
      value="ARRIVE"
    >
      components.DateTimeOptions.arriveBy
    </option>
  </select>
  <input
    class="datetime-slim"
    style="line-height: .8em; margin-left: 3px; padding: 0px; width: 65px;"
    value="12:34 PM"
  />
  <input
    class="datetime-slim"
    style="font-size: 14px; line-height: 1em; outline: none; width: 120px;"
    type="date"
    value="2022-11-17"
  />
</div>
`;
